@@ -1,4 +1,7 @@
 **pnp-0.6.15 ??/??/2011**
+  * Bugfix:  Fixed Overview link (Stefan Triep)
+  * Bugfix:  Fixed zoom popup (Rudolf Labuschagne)
+  * Feature: "Clear basket" button added (Stefan Triep) 
 
 **pnp-0.6.14 08/05/2011**
   * Feature: Webinterface for mobile devices based on jQuery Mobile \\ ( http://jquerymobile.com/ )
